--- a/index.html
+++ b/index.html
@@ -5,26 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Femmes et numérique | Lyon</title>
     <link rel="stylesheet" href="Data/animate.css" type="text/css">
-    <link rel="stylesheet" href="Data/hover-min.css" type="text/css">
     <link rel="stylesheet" href="Data/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="Data/jquery-ui.css" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="apple-touch-icon" sizes="57x57" href="Data/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="Data/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="Data/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="Data/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="Data/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="Data/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="Data/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="Data/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="Data/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="Data/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Data/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="Data/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Data/favicon-16x16.png">
+    <link rel="manifest" href="Data/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="Data/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <div class="container logo-div">
-    <img src="Data/Logo_F&N.png" onmouseover="this.className='animated rubberBand'" onmouseout="this.className=''" id="logo">
-    <!-- Import Image -->
+    <a href="index.html"><img src="Data/Logo_F&N.png" id="logo" class="grow" alt="Logo Femmes et Numérique"></a>
+      <!-- Import Image -->
   </div>
   <div class="container top_menu">
     <div class="row">
       <div class="col-sm-4 col-md-4 col-lg-4 top_menu_accueil">
-        <h2><a href="index.html" class="link hvr-grow-shadow">Accueil</a></h2>
+        <h2><a href="index.html" class="link">Accueil</a></h2>
       </div>
       <div class="col-sm-4 col-md-4 col-lg-4 top_menu_qsn">
-        <h2><a href="who.html" class="link hvr-grow-shadow">Qui Sommes-Nous</a></h2>
+        <h2><a href="who.html" class="link">Qui Sommes-Nous</a></h2>
       </div>
       <div class="col-sm-4 col-md-4 col-lg-4 top_menu_contact">
-        <h2><a href="contact.html" class="link hvr-grow-shadow">Contact</a></h2>
+        <h2><a href="contact.html" class="link">Contact</a></h2>
       </div>
     </div>
   </div>
@@ -48,10 +64,10 @@
   <div class="container-fluid footer" style="padding: 0px">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 social">
           <h3>Suivez notre actualité : </h3>
-          <a href="https://www.facebook.com/Femmes-et-Numérique-LYON-1722757278037152"><img src="Data/Facebook-black.svg" onmouseout="this.src='Data/Facebook-black.svg'" onmouseover="this.src='Data/Facebook-color.svg'" alt="Facebook" class="facebook_icon hvr-grow-shadow"></a>
-          <img src="Data/Twitter-black.svg" onmouseout="this.src='Data/Twitter-black.svg'" onmouseover="this.src='Data/Twitter-color.svg'" alt="Twitter" class="twitter_icon hvr-grow-shadow">
-          <img src="Data/Instagram-black.svg" onmouseout="this.src='Data/Instagram-black.svg'" onmouseover="this.src='Data/Instagram-color.svg'" alt="Instagram" class="instagram_icon hvr-grow-shadow">
-          <img src="Data/Youtube-black.svg" onmouseout="this.src='Data/Youtube-black.svg'" onmouseover="this.src='Data/Youtube-color.svg'" alt="Youtube" class="youtube_icon hvr-grow-shadow">
+          <a href="https://www.facebook.com/Femmes-et-Numérique-LYON-1722757278037152"><img src="Data/Facebook-black.svg" onmouseout="this.src='Data/Facebook-black.svg'" onmouseover="this.src='Data/Facebook-color.svg'" alt="Facebook" class="facebook_icon"></a>
+          <img src="Data/Twitter-black.svg" onmouseout="this.src='Data/Twitter-black.svg'" onmouseover="this.src='Data/Twitter-color.svg'" alt="Twitter" class="twitter_icon">
+          <img src="Data/Instagram-black.svg" onmouseout="this.src='Data/Instagram-black.svg'" onmouseover="this.src='Data/Instagram-color.svg'" alt="Instagram" class="instagram_icon">
+          <img src="Data/Youtube-black.svg" onmouseout="this.src='Data/Youtube-black.svg'" onmouseover="this.src='Data/Youtube-color.svg'" alt="Youtube" class="youtube_icon">
         </div>
   </div>
 
