--- a/who.html
+++ b/who.html
@@ -11,22 +11,23 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <div class="container logo">
-      <img src="Data/Logo_F&N.png" onmouseover="this.className='animated rubberBand'" onmouseout="this.className=''" id="logo">
-  </div>
-  <div class="container top_menu">
-      <div class="row">
-          <div class="col-sm-4 col-md-4 col-lg-4 top_menu_accueil">
-              <h2><a href="index.html" class="link hvr-grow-shadow">Accueil</a></h2>
-          </div>
-          <div class="col-sm-4 col-md-4 col-lg-4 top_menu_qsn">
-              <h2><a href="who.html" class="link hvr-grow-shadow">Qui Sommes-Nous</a></h2>
-          </div>
-          <div class="col-sm-4 col-md-4 col-lg-4 top_menu_contact">
-              <h2><a href="contact.html" class="link hvr-grow-shadow">Contact</a></h2>
-      </div>
+<div class="container logo-div">
+    <a href="index.html"><img src="Data/Logo_F&N.png" id="logo" class="grow" alt="Logo Femmes et Numérique"></a>
+    <!-- Import Image -->
+</div>
+<div class="container top_menu">
+    <div class="row">
+        <div class="col-sm-4 col-md-4 col-lg-4 top_menu_accueil">
+            <h2><a href="index.html" class="link">Accueil</a></h2>
+        </div>
+        <div class="col-sm-4 col-md-4 col-lg-4 top_menu_qsn">
+            <h2><a href="who.html" class="link">Qui Sommes-Nous</a></h2>
+        </div>
+        <div class="col-sm-4 col-md-4 col-lg-4 top_menu_contact">
+            <h2><a href="contact.html" class="link">Contact</a></h2>
+        </div>
     </div>
-  </div>
+</div>
   <div class="container-fluid banner">
     <div class="col-md-12 banner">
       <img src="Data/who.jpg" alt="Bannière d'une femme en train de coder sur un ordinateur" class="banner">
@@ -47,10 +48,10 @@
   <div class="container-fluid footer" style="padding: 0px">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 social">
           <h3>Suivez notre actualité : </h3>
-          <a href="https://www.facebook.com/Femmes-et-Numérique-LYON-1722757278037152"><img src="Data/Facebook-black.svg" onmouseout="this.src='Data/Facebook-black.svg'" onmouseover="this.src='Data/Facebook-color.svg'" alt="Facebook" class="facebook_icon hvr-grow-shadow"></a>
-          <img src="Data/Twitter-black.svg" onmouseout="this.src='Data/Twitter-black.svg'" onmouseover="this.src='Data/Twitter-color.svg'" alt="Twitter" class="twitter_icon hvr-grow-shadow">
-          <img src="Data/Instagram-black.svg" onmouseout="this.src='Data/Instagram-black.svg'" onmouseover="this.src='Data/Instagram-color.svg'" alt="Instagram" class="instagram_icon hvr-grow-shadow">
-          <img src="Data/Youtube-black.svg" onmouseout="this.src='Data/Youtube-black.svg'" onmouseover="this.src='Data/Youtube-color.svg'" alt="Youtube" class="youtube_icon hvr-grow-shadow">
+          <a href="https://www.facebook.com/Femmes-et-Numérique-LYON-1722757278037152"><img src="Data/Facebook-black.svg" onmouseout="this.src='Data/Facebook-black.svg'" onmouseover="this.src='Data/Facebook-color.svg'" alt="Facebook" class="facebook_icon"></a>
+          <img src="Data/Twitter-black.svg" onmouseout="this.src='Data/Twitter-black.svg'" onmouseover="this.src='Data/Twitter-color.svg'" alt="Twitter" class="twitter_icon">
+          <img src="Data/Instagram-black.svg" onmouseout="this.src='Data/Instagram-black.svg'" onmouseover="this.src='Data/Instagram-color.svg'" alt="Instagram" class="instagram_icon">
+          <img src="Data/Youtube-black.svg" onmouseout="this.src='Data/Youtube-black.svg'" onmouseover="this.src='Data/Youtube-color.svg'" alt="Youtube" class="youtube_icon">
       </div>
   </div>
 
