--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h2><a href="who.html" class="link">Qui Sommes-Nous</a></h2>
       </div>
       <div class="col-sm-4 col-md-4 col-lg-4 top_menu_contact">
-        <h2><a href="contact.html" class="link">Contact</a></h2>
+        <h2><a href="#" class="link">Contact</a></h2>
       </div>
     </div>
   </div>
